--- a/hello.html
+++ b/hello.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samriddhi</title>
-    <link href="sofa.png"/>
+    <link href="sofa.png">
 </head>
 
 <body>
     <h1>Samriddhi Kunwar</h1>
+    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200"/>
+    <img src="https://e7.pngegg.com/pngimages/395/108/png-clipart-architectural-graphy-of-high-rise-buildings-statue-of-liberty-one-world-trade-center-national-september-11-memorial-museum-september-11-attacks-collapse-of-the-world-trade-center-thumbnail.png" alt="9-11" height="200" width="200"/>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHbzzCCBmiXlSh_BSXeqJhRPvMCxQuhtdcg&s" height="200" width="200" alt="">
     <hr />
     <h2>About Me</h2>
     <pre>I'm someone who enjoys exploring how things work, especially in tech.
@@ -23,6 +26,8 @@ In my free time, I enjoy sketching and getting lost in music.</pre>
     <h2>Fun Fact</h2>
     <!-- <p>I have been procastinating for nearly a year now</p> -->
     <p>Nothing beats a Jet2 holiday and right now you can save 50 pounds per person !!!</p>
+    <br>
+    <a href="https://github.com/kunwarSamriddhi" target="_blank">Github account</a>
 </body>
 
 </html>
