--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <h5>Hello guyssss</h5>
     <p>
         <b>Lorem</b> ipsum dolor sit amet consectetur adipisicing elit. Maxime eos modi iure vero quia eum quo doloribus
-        nesciunt sapiente, officiis vel, ab earum quisquam sed, quam rem nemo aspernatur ipsum!</p>
-    <br/>
+        nesciunt sapiente, officiis vel, ab earum quisquam sed, quam rem nemo aspernatur ipsum!
+    </p>
+    <br />
     <pre> <strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. Sapiente 
         rem nesciunt doloribus? Quae aperiam
         doloremque, sapiente enim amet perferendis voluptatibus.</pre>
-        <hr/>
+    <hr />
     <pre> <i>Lorem</i> <del> ipsum dolor sit amet, consectetur adipisicing elit. Saepe est aperiam sequi ipsum, iste excepturi voluptas
     tenetur similique itaque, eveniet atque sapiente eligendi maxime! Modi id laudantium sapiente placeat iure
     tenetur. Rerum consequuntur ad quis, consequatur molestiae at voluptate, saepe impedit minus quaerat molestias
@@ -30,6 +31,14 @@
     sequi iusto, temporibus minima libero dolorem aperiam fuga? Corrupti sit, repellendus quisquam, aliquid error
     ratione neque eveniet laboriosam maxime sunt culpa illo temporibus eaque alias quibusdam tempora nihil delectus
     dolores?</del></pre>
+
+    <a href="https://www.facebook.com/" target="_blank" >This is anchor tag</a>
+    <br />
+    <a href="hello.html" target="_blank">Hello</a>
+    <br>
+    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200" title="view" />
+    <img src="sofa.png" alt="sofa" height="200" width="200">
+    
 </body>
 
 </html>
