--- a/hello.html
+++ b/hello.html
@@ -10,9 +10,11 @@
 
 <body>
     <h1>Samriddhi Kunwar</h1>
-    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200"/>
-    <img src="https://e7.pngegg.com/pngimages/395/108/png-clipart-architectural-graphy-of-high-rise-buildings-statue-of-liberty-one-world-trade-center-national-september-11-memorial-museum-september-11-attacks-collapse-of-the-world-trade-center-thumbnail.png" alt="9-11" height="200" width="200"/>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHbzzCCBmiXlSh_BSXeqJhRPvMCxQuhtdcg&s" height="200" width="200" alt="">
+    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200" />
+    <img src="https://e7.pngegg.com/pngimages/395/108/png-clipart-architectural-graphy-of-high-rise-buildings-statue-of-liberty-one-world-trade-center-national-september-11-memorial-museum-september-11-attacks-collapse-of-the-world-trade-center-thumbnail.png"
+        alt="9-11" height="200" width="200" />
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHbzzCCBmiXlSh_BSXeqJhRPvMCxQuhtdcg&s" height="200"
+        width="200" alt="">
     <hr />
     <h2>About Me</h2>
     <pre>I'm someone who enjoys exploring how things work, especially in tech.
