--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
     ratione neque eveniet laboriosam maxime sunt culpa illo temporibus eaque alias quibusdam tempora nihil delectus
     dolores?</del></pre>
 
-    <a href="https://www.facebook.com/" target="_blank" >This is anchor tag</a>
+    <a href="https://www.facebook.com/" target="_blank">This is anchor tag</a>
     <br />
     <a href="hello.html" target="_blank">Hello</a>
     <br>
-    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200" title="view" />
+    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200"
+        title="view" />
     <img src="sofa.png" alt="sofa" height="200" width="200">
-    
+
 </body>
 
 </html>
