--- a/table.html
+++ b/table.html
@@ -11,7 +11,7 @@
         table,
         th,
         td {
-            border: 2px dotted red;
+            border: 2px solid red;
             text-align: center;
         }
     </style>
