--- a/hello.html
+++ b/hello.html
@@ -6,25 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samriddhi</title>
     <link href="sofa.png">
+    <style>
+        table {
+            margin: auto;
+            border-collapse: collapse;
+        }
+
+        table,
+        th,
+        td {
+            border: 2px solid rgb(0, 0, 0);
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Samriddhi Kunwar</h1>
-    <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200" />
+    <!-- <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200" /> -->
     <img src="https://e7.pngegg.com/pngimages/395/108/png-clipart-architectural-graphy-of-high-rise-buildings-statue-of-liberty-one-world-trade-center-national-september-11-memorial-museum-september-11-attacks-collapse-of-the-world-trade-center-thumbnail.png"
         alt="9-11" height="200" width="200" />
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHbzzCCBmiXlSh_BSXeqJhRPvMCxQuhtdcg&s" height="200"
-        width="200" alt="">
+    <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHbzzCCBmiXlSh_BSXeqJhRPvMCxQuhtdcg&s" height="200"
+        width="200" alt=""> -->
     <hr />
     <h2>About Me</h2>
     <pre>I'm someone who enjoys exploring how things work, especially in tech.
 In my free time, I enjoy sketching and getting lost in music.</pre>
+
+    <h2>My Skills</h2>
+    <ul>
+        <li>Web development</li>
+        <li>Communication</li>
+        <li>Leadership</li>
+    </ul>
+
+
     <h2>My Schedule</h2>
+
+    <table width="70%">
+        <tr>
+            <th>Day</th>
+            <th>Task</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>Code Review</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>Team Meeting</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>Project Coding</td>
+        </tr>
+    </table>
+
+
+    <!-- <h2>My Schedule</h2>
+    </dl>
+
     <pre>Tuesday:
     7AM - Attend Classes
     9AM - Learn PHP
     10AM - Return Home
-    </pre>
+    </pre> -->
+
+    <hr>
+
+    <h2>My Goals</h2>
+    <dl>
+        <dt>Short term:</dt>
+        <dd>Learn Python</dd>
+        <dd>Create Portfolio</dd>
+        <dt>Long term: </dt>
+        <dd>Launch a startup</dd>
+    </dl>
+
     <h2>Fun Fact</h2>
     <!-- <p>I have been procastinating for nearly a year now</p> -->
     <p>Nothing beats a Jet2 holiday and right now you can save 50 pounds per person !!!</p>
