--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,11 @@
     <title>Samriddhi</title>
     <link href="sofa.png">
     <style>
+        body {
+            margin: 0px;
+            background-color: #b1e1fd;
+        }
+
         table {
             margin: auto;
             border-collapse: collapse;
@@ -18,30 +23,50 @@
             border: 2px solid rgb(0, 0, 0);
             text-align: center;
         }
+
+        .name {
+            /* background-image: url(insta.png); */
+            height: 20vh;
+        }
+
+        hr{
+            color: black;
+        }
+        /* h1{
+            padding-top: 50px; 
+            padding-left: 25px;
+        } */
+         pre,li,table,dl,p{
+            font-size: 15px;
+         }
     </style>
 </head>
 
 <body>
-    <h1>Samriddhi Kunwar</h1>
-    <!-- <img src="https://freepngimg.com/thumb/plane/37-plane-png-image.png" alt="9-11" height="200" width="200" /> -->
-    <img src="https://e7.pngegg.com/pngimages/395/108/png-clipart-architectural-graphy-of-high-rise-buildings-statue-of-liberty-one-world-trade-center-national-september-11-memorial-museum-september-11-attacks-collapse-of-the-world-trade-center-thumbnail.png"
-        alt="9-11" height="200" width="200" />
-    <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHbzzCCBmiXlSh_BSXeqJhRPvMCxQuhtdcg&s" height="200"
-        width="200" alt=""> -->
+    <div class="name">
+        <h1 style="font-size: 60px; padding-top: 25px; margin-top: 0;">Samriddhi Kunwar</h1>
+    </div>
     <hr />
-    <h2>About Me</h2>
-    <pre>I'm someone who enjoys exploring how things work, especially in tech.
-In my free time, I enjoy sketching and getting lost in music.</pre>
 
-    <h2>My Skills</h2>
+    <!-- <img src="https://e7.pngegg.com/pngimages/395/108/png-clipart-architectural-graphy-of-high-rise-buildings-statue-of-liberty-one-world-trade-center-national-september-11-memorial-museum-september-11-attacks-collapse-of-the-world-trade-center-thumbnail.png"
+        alt="9-11" height="200" width="200" /> -->
+    
+    <h1><u>About Me</u></h1>
+    <dd>
+        <pre>I'm someone who enjoys exploring how things work, especially in tech.
+In my free time, I enjoy sketching and getting lost in music.</pre>
+    </dd>
+    <hr>
+
+    <h1><u>My Skills</u></h1>
     <ul>
         <li>Web development</li>
         <li>Communication</li>
         <li>Leadership</li>
     </ul>
+    <hr>
 
-
-    <h2>My Schedule</h2>
+    <h1><u>My Schedule</u></h1>
 
     <table width="70%">
         <tr>
@@ -63,18 +88,9 @@ In my free time, I enjoy sketching and getting lost in music.</pre>
     </table>
 
 
-    <!-- <h2>My Schedule</h2>
-    </dl>
-
-    <pre>Tuesday:
-    7AM - Attend Classes
-    9AM - Learn PHP
-    10AM - Return Home
-    </pre> -->
-
     <hr>
 
-    <h2>My Goals</h2>
+    <h1><u>My Goals</u></h1>
     <dl>
         <dt>Short term:</dt>
         <dd>Learn Python</dd>
@@ -83,11 +99,12 @@ In my free time, I enjoy sketching and getting lost in music.</pre>
         <dd>Launch a startup</dd>
     </dl>
 
-    <h2>Fun Fact</h2>
+    <h1><u>Fun Fact</u></h1>
     <!-- <p>I have been procastinating for nearly a year now</p> -->
     <p>Nothing beats a Jet2 holiday and right now you can save 50 pounds per person !!!</p>
     <br>
     <a href="https://github.com/kunwarSamriddhi" target="_blank">Github account</a>
+    <a href="css.html" target="_blank">....</a>
 </body>
 
 </html>
